@@ -1,6 +1,7 @@
 2.1.1 (04.05.2018):
 
 * Fix saving profile bug caused by deprecated Gtk2 API
+* + support for dragging files from file managers (again)
 
 
 2.1.0 (20.04.2018):
